# xeditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
includes/: defaults.hpp  scene_editor.hpp  ui.hpp
includes/components/: audio_player.hpp  billboard.hpp  light_cube.hpp  light_source.hpp
src/: main.cpp  ui.cpp
